# xiaozhi-server

./: .dockerignore  .gitignore  README.md  README_de.md  README_en.md  README_pt_BR.md  README_vi.md
main/manager-api-fastapi/: .env.example  .gitignore  Dockerfile  Dockerfile.migrations  Dockerfile.nginx  README.md  docker-compose.yml  migration-pom.xml  pyproject.toml
main/manager-api-fastapi/app/: __init__.py  __main__.py  main.py
main/manager-api-fastapi/app/core/: __init__.py  config.py  crypto.py  database.py  errors.py  i18n.py  ids.py  redis.py  responses.py  security.py  serialization.py
main/manager-api-fastapi/app/integrations/: __init__.py  llm.py  mcp.py  mqtt_gateway.py  ragflow.py  voice_clone.py  voiceprint.py
main/manager-api-fastapi/app/jobs/: __init__.py  tasks.py  worker.py
main/manager-api-fastapi/app/repositories/: agent.py  config.py  correctword.py  device.py  knowledge.py  model.py  (+4 more)
main/manager-api-fastapi/compatibility/: authenticated-route-results.json  consumer-routes.json  contract-results.json  java-routes.json  performance-results.json  route-surface-results.json
main/manager-api-fastapi/deploy/: nginx-entrypoint.sh  nginx.conf
main/manager-api-fastapi/scripts/: container-entrypoint.sh  extract_consumer_routes.py  extract_java_routes.py  isolated-env.sh  render_compatibility_doc.py  run-isolated-contract-tests.sh  run-migrations.sh  start-api.sh  start-jobs.sh
main/manager-api-fastapi/tests/: __init__.py  domain_support.py  test_agent_compatibility.py  test_compatibility_document.py  test_config_domain.py  test_consumer_route_manifest.py  test_core_compatibility.py  test_deployment_artifacts.py  test_deployment_runtime.py  test_device.py  test_java_route_manifest.py  test_knowledge_ragflow.py  test_model_timbre_correctword.py  test_redis_java_interop.py  test_schema_alias_compatibility.py  test_security_domain.py  test_sm2_interop.py  test_sys_domain.py  test_voiceclone.py
(+527 files in other folders)
